[package]
name = "ftl"
version = "0.1.0"
edition = "2021"
description = "A sorta-static site generator and server."
repository = "https://github.com/SomewhereOutInSpace/FTL"
readme = "README.md"
license = "AGPL-3.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
# Logging / Errors
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing = "0.1.37"
color-eyre = "0.6.2"
indoc = "1.0.7"
# Parallelism
rayon = "1.5"
flume = "0.10.14"
# File crawling
seahash = "4.1"
walkdir = "2"
# Database
rusqlite = { version = "0.28", features = ["bundled"] }
rusqlite_migration = "1.0.0"
r2d2_sqlite = "0.21"
r2d2 = "0.8.10"
# Serde cinematic universe
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.1.0"
serde_json = "1"
serde_repr = "0.1"
serde_rusqlite = "0.31"
# Rendering/parsing
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
minijinja = { version = "0.26.0", features = ["source", "speedups"] }
regex = "1.6"
toml = "0.5"
gh-emoji = "1.0.7"
syntect = "5.0.0"
grass = "0.11"
lol_html = "0.3.1"
slug = "0.1.4"
# Serving
tokio = { version = "1.21.2", features = ["full"] }
axum = "0.5.17"
tower-http = "0.3.4"
# Other
clap = { version = "4", features = ["derive"] }
num_enum = "0.5"
once_cell = "1.15.0"