[package]
name = "ftl"
authors = ["Colonial"]
version = "0.1.0"
edition = "2021"
description = "A sorta-static site generator and server."
repository = "https://github.com/SomewhereOutInSpace/FTL"
readme = "README.md"
license = "AGPL-3.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
# Logging / Errors
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing = "0.1.37"
color-eyre = "0.6.2"
indoc = "2.0.0"

# Parallelism
rayon = "1.5"
once_cell = "1.15.0"
arc-swap = "1.6.0"
crossbeam = "0.8.2"
walkdir = "2"

# Database
sqlite3-src = { version = "0.5.0", features = ["bundled"] }
sqlite = "0.31.0"

# Serde cinematic universe
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"

# Parsing
nom = "7.1.3"
regex = "1.6"
toml = "0.7"

# Rendering
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
minijinja = { version = "1", features = ["loader", "speedups", "unicode"] }
minijinja-stack-ref = "1.0.5"
gh-emoji = "1.0.7"
inkjet = { git = "https://github.com/SomewhereOutInSpace/inkjet.git" }
grass = "0.13.1"
lol_html = "1.1.1"
slug = "0.1.4"

# Serving
tokio = { version = "1", features = ["full"] }
axum = "0.6"
axum-macros = "0.3.8"
# tower-http = "0.3.4"

# Other
clap = { version = "4", features = ["derive"] }
seahash = "4.1"
ahash = { version = "0.8.2", features = ["serde"] }
itertools = "0.11.0"
new_mime_guess = "4.0.1"
chrono = "0.4.23"
paste = "1.0.14"
