[package]
name = "ftl"
authors = ["Colonial"]
version = "0.1.0"
edition = "2021"
description = "A sorta-static site generator and server."
repository = "https://github.com/Colonial-Dev/FTL"
readme = "README.md"
license = "AGPL-3.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
indicatif = { version = "0.17.6", features = ["rayon"] }
dialoguer = "0.11"
console = "0.15.7"
tabled = "0.14.0"

# Logging / Errors
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing = "0.1.37"
color-eyre = "0.6.2"
indoc = "2.0.0"

# Parallelism
rayon = "1.5"
once_cell = "1.15.0"
arc-swap = "1.6.0"
crossbeam = "0.8.2"
walkdir = "2"

# Database
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Serde cinematic universe
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"

# Parsing
nom = "7.1.3"
regex = "1.6"
toml = "0.8"

# Rendering
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
minijinja = { version = "1", features = ["loader", "speedups", "unicode"] }
minijinja-stack-ref = "1.0.5"
gh-emoji = "1.0.7"
inkjet = "0.8.0"
grass = "0.13.1"
lol_html = "1.1.1"
slug = "0.1.4"
base64 = "0.21.4"

# Serving
tokio = { version = "1", features = ["full"] }
axum = "0.6"
moka = { version = "0.11.3", features = ["future"] }
tower-http = "0.4.4"

# Other
seahash = "4.1"
ahash = { version = "0.8.2", features = ["serde"] }
itertools = "0.11.0"
chrono = "0.4.23"
ansi-to-html = "0.1.3"
notify-debouncer-full = "0.3.1"

[dev-dependencies]
paste = "1.0.14"
